<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_marginTop="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        android:background="@drawable/fieldset_border">

        <androidx.appcompat.widget.AppCompatTextView
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:textColor="@color/rich_black"
            android:layout_marginBottom="20dp"
            android:textAllCaps="true"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/warning_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#ff0000"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/f_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/f_name"
            android:backgroundTint="@color/accentColor"
            android:layout_marginBottom="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/l_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/l_name"
            android:backgroundTint="@color/accentColor"
            android:layout_marginBottom="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/user_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_hint_1"
            android:backgroundTint="@color/accentColor"
            android:layout_marginBottom="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/input_hint_2"
            android:backgroundTint="@color/accentColor"
            android:layout_marginBottom="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signup_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:background="@drawable/btn_bg"
            android:textColor="@color/white"
            android:layout_marginBottom="20dp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/already_have_acc"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/already_have_acc"
            android:textColor="@color/accentColor" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.constraintlayout.widget.ConstraintLayout>