<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minWidth="300dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        android:background="@drawable/fieldset_border"
        android:padding="20dp"
        android:layout_margin="10dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/menu_title"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_todo_item"
            android:textColor="@color/rich_black"
            android:layout_marginBottom="20dp"
            android:textAllCaps="true"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/warning_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#ff0000"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/todo_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/todo_item_title"
            android:backgroundTint="@color/accentColor"
            android:layout_marginBottom="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/todo_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine|textAutoComplete|textAutoCorrect|textCapSentences"
            android:hint="@string/todo_item_desc"
            android:backgroundTint="@color/accentColor"
            android:layout_marginBottom="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:maxLines="5"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <CheckBox
                android:id="@+id/item_completed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_completed"
                android:layout_marginBottom="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/delete_btn"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginBottom="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:background="@drawable/btn_bg"
                android:visibility="invisible"
                android:src="@drawable/ic_baseline_delete_forever_24"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/add_item_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Add Item"
            android:background="@drawable/btn_bg"
            android:textColor="@color/white"/>


    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>